WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205302
-[UIWKDocumentContext markedTextRange] is wrong when the caret is not at the start of marked text
https://bugs.webkit.org/show_bug.cgi?id=205302
Summary
-[UIWKDocumentContext markedTextRange] is wrong when the caret is not at the ...
Wenson Hsieh
Reported
2019-12-16 14:48:11 PST
-[UIWKDocumentContext markedTextRange] wrong in almost all circumstances (the only exception is when the selection is a caret at the start of the composition range). This is partially due to logic in UIKit that attempts to compute -markedTextRange without considering the overlap between `contextBefore` and `markedText`, but also due to `selectedRangeInMarkedText` being wrong, since distanceBetweenPositions(A, B) returns a negative value if A comes before B.
Attachments
Patch
(9.23 KB, patch)
2019-12-16 15:34 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-12-16 15:34:17 PST
Created
attachment 385820
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-16 17:16:51 PST
Comment on
attachment 385820
[details]
Patch Clearing flags on attachment: 385820 Committed
r253602
: <
https://trac.webkit.org/changeset/253602
>
WebKit Commit Bot
Comment 3
2019-12-16 17:16:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-12-16 17:17:25 PST
<
rdar://problem/57991560
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug