-[UIWKDocumentContext markedTextRange] is wrong when the caret is not at the start of marked text https://bugs.webkit.org/show_bug.cgi?id=205302

Reviewed by Tim Horton.

Source/WebKit:

Makes a few minor adjustments around marked text handling in document editing context request code.

1. In the case where markedTextRects are requested, automatically expand the context range (i.e. contextBefore
and contextAfter) to encompass the marked text. This fixes UIWKDocumentContext's logic that computes the
marked text range by subtracting `contextBefore` string's length from `selectedRangeInMarkedText`'s location.

(Note that this still requires an adjustment in UIKit to actually respect `selectedRangeInMarkedText` when
computing `markedTextRange`. This is tracked in <rdar://problem/57338528>).

2. Stop clamping compositionStart and compositionEnd to the range of interest (in this case, the selection
range, which is a collapsed caret selection). This makes the composition range seem as if it were empty, which
prevents us from computing the marked text string (and importantly, its length).

3. Flip the arguments to `distanceBetweenPositions`, such that we end up with a positive value for
`selectedRangeInMarkedText` in the case where `compositionStart` is before `startOfRangeOfInterestInSelection`.

Test: DocumentEditingContext.RequestMarkedTextRectsAndTextOnly

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::requestDocumentEditingContext):

Tools:

Add an API test to exercise the case where the options `UIWKDocumentRequestMarkedTextRects` and
`UIWKDocumentRequestText` are used to grab marked text rects.

* TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
(-[UIWKDocumentContext contextBeforeLength]):
(-[UIWKDocumentContext markedTextLength]):
(-[UIWKDocumentContext markedTextRange]):

Work around a bug that should be fixed by <rdar://problem/57338528>, so that the new API test can pass on
shipping builds of iOS.


Canonical link: https://commits.webkit.org/218514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253602 268f45cc-cd09-0410-ab3c-d52691b4dbfc